3.3/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  ports:
  - name: front
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: front

---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  ports:
  - name: back
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: back

---

apiVersion: v1
kind: Service
metadata:
  name: cache-svc
spec:
  ports:
  - name: cash
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cash
